5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4343/executions/1644_2446.log
== SUBMITION (2019-04-16 15:12:07) 
-- CODE:
s=float(input("Senha de seis digitos: "))
a=(s//100000)%10
b=(s//10000)%10
c=(s//1000)%10
d=(s//100)%10
e=(s//10)%10
f=(s//1)%10
if(b+d+f) % (a+c+e) == 0
 print("acesso liberado")
else:
	print("senha invalidade") 
-- EXECUTION TIME:
0.228953
-- ERROR:
  File "/home/codebench/codes/1644/2446/main.py", line 8
    if(b+d+f) % (a+c+e) == 0
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:12:07) 
-- CODE:
s=float(input("Senha de seis digitos: "))
a=(s//100000)%10
b=(s//10000)%10
c=(s//1000)%10
d=(s//100)%10
e=(s//10)%10
f=(s//1)%10
if(b+d+f) % (a+c+e) == 0
 print("acesso liberado")
else:
	print("senha invalidade") 
-- EXECUTION TIME:
0.159351
-- ERROR:
  File "/home/codebench/codes/1644/2446/main.py", line 8
    if(b+d+f) % (a+c+e) == 0
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:12:09) 
-- CODE:
s=float(input("Senha de seis digitos: "))
a=(s//100000)%10
b=(s//10000)%10
c=(s//1000)%10
d=(s//100)%10
e=(s//10)%10
f=(s//1)%10
if(b+d+f) % (a+c+e) == 0
 print("acesso liberado")
else:
	print("senha invalidade") 
-- EXECUTION TIME:
0.144272
-- ERROR:
  File "/home/codebench/codes/1644/2446/main.py", line 8
    if(b+d+f) % (a+c+e) == 0
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:12:10) 
-- CODE:
s=float(input("Senha de seis digitos: "))
a=(s//100000)%10
b=(s//10000)%10
c=(s//1000)%10
d=(s//100)%10
e=(s//10)%10
f=(s//1)%10
if(b+d+f) % (a+c+e) == 0
 print("acesso liberado")
else:
	print("senha invalidade") 
-- EXECUTION TIME:
0.243929
-- ERROR:
  File "/home/codebench/codes/1644/2446/main.py", line 8
    if(b+d+f) % (a+c+e) == 0
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:12:10) 
-- CODE:
s=float(input("Senha de seis digitos: "))
a=(s//100000)%10
b=(s//10000)%10
c=(s//1000)%10
d=(s//100)%10
e=(s//10)%10
f=(s//1)%10
if(b+d+f) % (a+c+e) == 0
 print("acesso liberado")
else:
	print("senha invalidade") 
-- EXECUTION TIME:
0.141775
-- ERROR:
  File "/home/codebench/codes/1644/2446/main.py", line 8
    if(b+d+f) % (a+c+e) == 0
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:12:11) 
-- CODE:
s=float(input("Senha de seis digitos: "))
a=(s//100000)%10
b=(s//10000)%10
c=(s//1000)%10
d=(s//100)%10
e=(s//10)%10
f=(s//1)%10
if(b+d+f) % (a+c+e) == 0
 print("acesso liberado")
else:
	print("senha invalidade") 
-- EXECUTION TIME:
0.198381
-- ERROR:
  File "/home/codebench/codes/1644/2446/main.py", line 8
    if(b+d+f) % (a+c+e) == 0
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:12:11) 
-- CODE:
s=float(input("Senha de seis digitos: "))
a=(s//100000)%10
b=(s//10000)%10
c=(s//1000)%10
d=(s//100)%10
e=(s//10)%10
f=(s//1)%10
if(b+d+f) % (a+c+e) == 0
 print("acesso liberado")
else:
	print("senha invalidade") 
-- EXECUTION TIME:
0.153847
-- ERROR:
  File "/home/codebench/codes/1644/2446/main.py", line 8
    if(b+d+f) % (a+c+e) == 0
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:12:14) 
-- CODE:
s=float(input("Senha de seis digitos: "))
a=(s//100000)%10
b=(s//10000)%10
c=(s//1000)%10
d=(s//100)%10
e=(s//10)%10
f=(s//1)%10
if(b+d+f) % (a+c+e) == 0
 print("acesso liberado")
else:
	print("senha invalidade") 
-- EXECUTION TIME:
0.148683
-- ERROR:
  File "/home/codebench/codes/1644/2446/main.py", line 8
    if(b+d+f) % (a+c+e) == 0
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:12:14) 
-- CODE:
s=float(input("Senha de seis digitos: "))
a=(s//100000)%10
b=(s//10000)%10
c=(s//1000)%10
d=(s//100)%10
e=(s//10)%10
f=(s//1)%10
if(b+d+f) % (a+c+e) == 0
 print("acesso liberado")
else:
	print("senha invalidade") 
-- EXECUTION TIME:
0.187387
-- ERROR:
  File "/home/codebench/codes/1644/2446/main.py", line 8
    if(b+d+f) % (a+c+e) == 0
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:12:15) 
-- CODE:
s=float(input("Senha de seis digitos: "))
a=(s//100000)%10
b=(s//10000)%10
c=(s//1000)%10
d=(s//100)%10
e=(s//10)%10
f=(s//1)%10
if(b+d+f) % (a+c+e) == 0
 print("acesso liberado")
else:
	print("senha invalidade") 
-- EXECUTION TIME:
0.260324
-- ERROR:
  File "/home/codebench/codes/1644/2446/main.py", line 8
    if(b+d+f) % (a+c+e) == 0
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:12:15) 
-- CODE:
s=float(input("Senha de seis digitos: "))
a=(s//100000)%10
b=(s//10000)%10
c=(s//1000)%10
d=(s//100)%10
e=(s//10)%10
f=(s//1)%10
if(b+d+f) % (a+c+e) == 0
 print("acesso liberado")
else:
	print("senha invalidade") 
-- EXECUTION TIME:
0.128752
-- ERROR:
  File "/home/codebench/codes/1644/2446/main.py", line 8
    if(b+d+f) % (a+c+e) == 0
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:44:24) 
-- CODE:
s=float(input("Senha de seis digitos: "))
a=(s//100000)%10
b=(s//10000)%10
c=(s//1000)%10
d=(s//100)%10
e=(s//10)%10
f=(s//1)%10
if(b+d+f) % (a+c+e) == 0
 print("acesso liberado")
else:
	print("senha invalidade") 
-- EXECUTION TIME:
0.130123
-- ERROR:
  File "/home/codebench/codes/1644/2446/main.py", line 8
    if(b+d+f) % (a+c+e) == 0
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
